# nnapi-sample-convolution

./: CMakeLists.txt  README.md  main.cpp  simple_model.cpp  simple_model.hpp
